contact section mobile fixed

--- a/styles.css
+++ b/styles.css
@@ -813,6 +813,7 @@ textarea {
   }
 
   .contact .short-contact h2 {
+    justify-content: center;
     width: fit-content;
   }
 
